[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pharma-graph-answering"
version = "0.1.0"
description = "Standalone answering phase that consumes verified payloads"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pydantic>=2.8",
  "pydantic-settings>=2.4",
  "typer>=0.12",
  "requests>=2.32",
  "neo4j>=5.24",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3",
]

[tool.setuptools]
packages = [
  "answering",
  "answering.app",
  "answering.prompts",
  "answering.renderers",
  "answering.schemas",
  "answering.services",
]

[tool.setuptools.package-dir]
answering = "."
"answering.app" = "app"
"answering.prompts" = "prompts"
"answering.renderers" = "renderers"
"answering.schemas" = "schemas"
"answering.services" = "services"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
