[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "omics-agentic-data-loaders"
version = "0.1.0"
description = "Dockerized Polars pipeline for loading a filtered pharma knowledge graph into Neo4j"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "polars>=1.12",
  "pydantic>=2.8",
  "pydantic-settings>=2.4",
  "neo4j>=5.24",
  "typer>=0.12",
  "requests>=2.32",
  "sentence-transformers>=3.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3",
]

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["app*", "pipelines*", "graph*", "embeddings*"]

[tool.pytest.ini_options]
testpaths = ["tests", "../embeddings/tests"]
addopts = "-q"
