[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "omics-agentic-gds"
version = "0.1.0"
description = "Standalone GDS runner for FastRP, Leiden, and optional KNN"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "neo4j>=5.24",
  "pydantic>=2.8",
  "pydantic-settings>=2.4",
  "typer>=0.12",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3",
]

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["gds*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
