[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "omics-agentic-graphml"
version = "0.1.0"
description = "Standalone graphML phase for Neo4j GDS FastRP, Leiden, and optional KNN"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "neo4j>=5.24",
  "pydantic>=2.8",
  "pydantic-settings>=2.4",
  "typer>=0.12",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3",
]

[tool.setuptools]
packages = [
  "graphML",
  "graphML.app",
  "graphML.projections",
  "graphML.algorithms",
  "graphML.writers",
  "graphML.validation",
]

[tool.setuptools.package-dir]
graphML = "."
"graphML.app" = "app"
"graphML.projections" = "projections"
"graphML.algorithms" = "algorithms"
"graphML.writers" = "writers"
"graphML.validation" = "validation"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
