[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "omics-agentic-modeling"
version = "0.1.0"
description = "Standalone modeling phase for protein target prioritization using Neo4j features and MLflow"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "neo4j>=5.24",
  "numpy>=1.26",
  "pandas>=2.2",
  "pyarrow>=17.0",
  "scikit-learn>=1.5",
  "mlflow>=2.16",
  "matplotlib>=3.9",
  "pydantic>=2.8",
  "pydantic-settings>=2.4",
  "typer>=0.12",
]

[project.optional-dependencies]
xgboost = [
  "xgboost>=2.1",
]
dev = [
  "pytest>=8.3",
]

[tool.setuptools]
packages = [
  "modeling",
  "modeling.app",
  "modeling.data",
  "modeling.features",
  "modeling.training",
  "modeling.inference",
  "modeling.validation",
]

[tool.setuptools.package-dir]
modeling = "."
"modeling.app" = "app"
"modeling.data" = "data"
"modeling.features" = "features"
"modeling.training" = "training"
"modeling.inference" = "inference"
"modeling.validation" = "validation"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
